--- a/blogpost.html
+++ b/blogpost.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="ccs/stilos.css">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    <h1>Aqui vamos a hacer el blog del post</h1>
+    <div id="container">
+        <div id="post">
+            <h1>Aqui vamos a hacer el blog del post</h1>
+            <p>y ste es el parrafo</p>
+        </div>
+    </div>
 </body>
 </html>
