cambio version hiperblog

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
 <body>
     <div id="container">
         <div id="post">
-            <h1>Aqui vamos a hacer el blog del post</h1>
+            <h1>VAMOS A HACER UNOS CAMBIOS</h1>
             <p>y ste es el parrafo</p>
         </div>
     </div>
