--- a/blogpost.html
+++ b/blogpost.html
@@ -13,9 +13,10 @@
             <div id="post">
                 <h1>Este es el t&iacute;tulo atractivo e interesante del post</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
-                <p><img src="imagenes/equipo.jpg" width="100%" /></p>
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres.... por ahora.</p>
+                <img src="https://imgur.com/SSWle5U.jpg" alt="pizza" width="200">
                 <p>Suscribete y dale like</p>
+                
             </div>
 	    <div id="footer">
 		Hecho con amor en Platzi &lt;3
